--- a/vprodb.yaml
+++ b/vprodb.yaml
@@ -16,25 +16,27 @@ spec:
     spec:
       containers:
       - name: vprodb
-        image: hsinyih/vprofile-mysql:V1
+        image: vprofile/vprofiledb:V1
         args:
-          - "--ignore-db-dir=lost+found"
+         - "--ignore-db-dir=lost+found"
         volumeMounts:
-          - mountPath: /var/lib/mysql
-            name: vpro-db-data
+        - mountPath: /var/lib/mysql
+          name: vpro-db-data
         ports:
-          - name: vprodb-port
-            containerPort: 3306
+        - name: vprodb-port
+          containerPort: 3306
         env:
-          - name: MYSQL_ROOT_PASSWORD
-            valueFrom:
-              secretKeyRef:
-                name: app-secret
-                key: db-pass
+         - name: MYSQL_ROOT_PASSWORD
+           valueFrom:
+             secretKeyRef:
+               name: app-secret
+               key: db-pass
       nodeSelector:
         zone: ap-northeast-1a
       volumes:
         - name: vpro-db-data
+          # This AWS EBS volume must already exist.
           awsElasticBlockStore:
-            volumeID: vol-0986f348a413cbec8
-            fsType: ext4
+             volumeID: vol-0986f348a413cbec8
+             fsType: ext4
+
