--- a/vprodb.yaml
+++ b/vprodb.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: vprodb
-        image: vprofile/vprofiledb:V1
+        image: hsinyih/vprofile-mysql:V1
         args:
          - "--ignore-db-dir=lost+found"
         volumeMounts:
